--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   assets:
     - assets/logo.png
     - assets/promosi.jpg
+    - assets/profile.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
